498018: remove MaxPermSize from pom.xml
Change-Id: I58921083f2f713c4159fb0e93a6488677786afa5
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=498018
Signed-off-by: Frank Becker <eclipse@frank-becker.de>